--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Introduce Your Self</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempore quos repellat ex quaerat maxime repudiandae natus, ipsum nisi eaque voluptas consequatur dolor, saepe, recusandae quo. Repellat odit nostrum quisquam vel aperiam velit earum ducimus tempora voluptate! Assumenda, minus molestias voluptatibus dolorem nulla ratione voluptatem accusamus commodi tenetur eos! Velit?</p>
 </body>
 </html>
